--- a/.github/workflows/web_app.yml
+++ b/.github/workflows/web_app.yml
@@ -10,7 +10,7 @@ on:
 # See here for more detail about cron: https://crontab.guru/examples.html
 
 #  schedule:
-#    - cron: '0 0 * * *' # Default: run at 00:00 UTC everyday
+- cron: '0 0 * * *' # Default: run at 00:00 UTC everyday
 
 # TRIGGER ON PUSH / PULL
 
